Fix alignment of speakers lists (especially on mobile where it was only 1 column)

--- a/_sass/ui-componants/_person.scss
+++ b/_sass/ui-componants/_person.scss
@@ -1,5 +1,27 @@
 .person {
   position: relative;
+
+  &-grid {
+    $maxNumberOfColumns: 4;
+    display: grid;
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(14rem, 1fr)
+    );
+    gap: $global-gutters $global-gutters;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media (min-width: 50rem) {
+      $columnMaxWidth: calc(($wrapper-max-width - 3 * $global-gutters) / 4);
+      max-width: $wrapper-max-width;
+      grid-template-columns: repeat(
+        auto-fill,
+        minmax($columnMaxWidth, 1fr)
+      );
+    }
+  }
+
   &-avatar {
     max-width: 5em;
     border-radius: 50%;
@@ -9,6 +31,10 @@
     font-size: 0;
     font-size: 0;
     display: inline-block;
+
+    &-container {
+      top: -0.3em;
+    }
 
     li {
       font-size: 20px;
